--- a/apps/web/src/app/resume/resources/template.tex
+++ b/apps/web/src/app/resume/resources/template.tex
@@ -38,7 +38,7 @@
 
 \address{Seattle, WA} % Main address
 
-
+\address {da.nielyi.com}
 
 \address{(503) 545-8728 \\ d@nielyi.com} % Contact information
 
@@ -49,7 +49,14 @@
 %  EXECUTIVE SUMMARY
 % ------------------
 
+\begin{rSection}{Executive Summary}
+\begin {rSubsection} {}{}{}{}
 
+   \item Results-driven, top-performing sales and business development professional with a unique edge through technical fluency, strengthening credibility from executives to engineers. Technical acumen demonstrated at da.nielyi.com
+
+
+    \end {rSubsection}
+\end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
@@ -57,8 +64,10 @@
 
 \begin{rSection}{Experience}
 
-    \begin{rSubsection}{\relsize{.5}Mobi Measure}{February 2025 - Present\smallskip}{\relsize{.5}Co-Founder}{}
-        \item Co-Founder of Mobi Measure - frontend development, sales, marketing, business development.
+\begin{rSubsection}{\relsize{.5}Mobi Measure}{February 2025 - Present\smallskip}{\relsize{.5}Co-Founder}{}
+        \item Mobi Measure is an image metrology platform designed for measurements on semiconductor SEM/TEM images.
+        \item Main focuses are front-end development, sales, marketing, business development, design, and web development.
+        \item Founder-led sales, bringing Mobi Measure to the market from scratch.
     \end{rSubsection}
 
     \begin{rSubsection}{\relsize{.5}Rundoo}{August 2024 - February 2025\smallskip}{\relsize{.5}Account Executive}{}
@@ -89,33 +98,33 @@
 		\item 2020 Pinnacle Award Winner (Presidents Club) - Awarded to top 10\% performing sales representatives who have also shown outstanding leadership and team impact across territory, district, and area.
 		\item Perennial top performer, always finishing in the top 3 at or above quota in a top 25 nationwide team, with quota attainments of 104\%, 106\%, and 109\% versus \\nationwide and area averages under 97\%. Awarded larger and more densely populated territories with greater business impact after each year.
 
-            \item High focus on industry and product knowledge, combined with strategic discovery to identify client needs and demonstrate value.
+            %\item High focus on industry and product knowledge, combined with strategic discovery to identify client needs and demonstrate value.
   
             \item Promoted in the second year due to sales performance and leadership impact, such as spearheading initiatives to increase team education on medical and physiological topics pertinent to our products, working with team to better utilize Tableau dashboards, and mentoring several interns who were extended full-time job offers nationwide.
             
 	\end{rSubsection}
 
 %------------------------------------------------
-\newpage
+
 
         \begin{rSubsection}{University of Washington Foster School of 
         Business}{January 2020 - Present}{Volunteer Sales Program Mentor}{}
             \item Volunteer mentor, working quarterly with undergraduate students in the Jack Ann Rhodes Professional Sales Program.
         
-            \item Every quarter, students in the sales program are paired up with volunteer mentors. Responsibilities include meeting with the student and mentoring them as they begin their careers.
+           % \item Every quarter, students in the sales program are paired up with volunteer mentors. Responsibilities include meeting with the student and mentoring them as they begin their careers.
             
         \end{rSubsection}
         
 	\begin{rSubsection}{Keller Williams Realty}{January 2018 - January 2019}{Sales Development and Marketing}{}
 		\item Prospected, generated, and qualified new business from outbound prospecting and inbound leads for residential homes, resulting in over \$8 Million in sales volume, driving +20\% YoY performance in a 16\% down market.
-            \item Sales KPI's involved call numbers, inbound response time, booked demos, and close rate on booked demos and were achieved by balancing inbound leads with cold outreach and following up with all prospects.
-            \item Created marketing materials using Photoshop and Illustrator, including webpages, one-page pamphlets, a new sales presentation folder, and large-format banners.
+          % \item Sales KPI's involved call numbers, inbound response time, booked demos, and close rate on booked demos and were achieved by balancing inbound leads with cold outreach and following up with all prospects.
+          %  \item Created marketing materials using Photoshop and Illustrator, including webpages, one-page pamphlets, a new sales presentation folder, and large-format banners.
 		
 	\end{rSubsection}
 
         \begin{rSubsection}{Small Business Owner}{December 2016 - December 2021}{Tutor}{}
             \item Built an in-person 1-on-1 tutoring business from the ground up, prospecting and building relationships with the \\surrounding communities to create initial opportunities, eventually transitioning into a 100\% referral-based business.
-            \item Responsibilities included business development, pre-planning of tutoring materials, execution, pricing/negotiation, and FP\&A.
+           % \item Responsibilities included business development, pre-planning of tutoring materials, execution, pricing/negotiation, and FP\&A.
            
         \end{rSubsection}
 
@@ -131,9 +140,9 @@
         
             \item Worked under head coach Chris Petersen and Offensive Coordinator Jonathan Smith and managed student-athlete equipment for over 100 athletes with an extreme focus on attention-to-detail for pregame, walk-through, practice, travel, and gameday.
 
-            \item Worked directly with Offensive Coordinator and quarterback position group to ensure that every part of each practice was prepared for and executed smoothly.
+           % \item Worked directly with Offensive Coordinator and quarterback position group to ensure that every part of each practice was prepared for and executed smoothly.
 
-            \item Led a team of 6 student managers with no prior experience with football equipment to correctly identify, handle, \\diagnose, and solve problems before they arose.
+            %\item Led a team of 6 student managers with no prior experience with football equipment to correctly identify, handle, \\diagnose, and solve problems before they arose.
 
             
             
@@ -159,14 +168,24 @@
 
 	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
 		Languages & English, Korean \\
-		Sales Tools \& Processes & Salesforce, Sales Navigator, Excel, Tableau \\
-		  Other Tools & Photoshop, Illustrator \\
+		Sales Tools \& Processes & Salesforce, Sales Navigator, Excel, Tableau, HubSpot, Clay \\
+		  Other Tools & Cursor, Photoshop, Illustrator, InDesign, Final Cut \\
             %Publications & Patent Application US20160346729A1 \\
-		  Basic Coding Understanding & Java, LaTeX, Python
+		  Working Development Knowledge & Next.js, React, AWS Serverless, Tailwind CSS, GitHub Actions
 	\end{tabular}
 
 \end{rSection}
 
+%----------------------------------------------------------------------------------------
+%	EXAMPLE SECTION
+%----------------------------------------------------------------------------------------
 
+%\begin{rSection}{Section Name}
+
+	%Section content\ldots
+
+%\end{rSection}
+
+%----------------------------------------------------------------------------------------
 
 \end{document}
