Remove password gate from Softstack page and update resume template

--- a/apps/web/src/app/resume/resources/template.tex
+++ b/apps/web/src/app/resume/resources/template.tex
@@ -45,45 +45,35 @@
 %----------------------------------------------------------------------------------------
 
 \begin{document}
-% ------------------------
-%  EXECUTIVE SUMMARY
-% ------------------
-
-\begin{rSection}{Executive Summary}
-\begin {rSubsection} {}{}{}{}
-
-   \item Results-driven, top-performing sales and business development professional with a unique edge through technical fluency, strengthening credibility from executives to engineers. Technical acumen demonstrated at da.nielyi.com
-
-
-    \end {rSubsection}
-\end{rSection}
-
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Experience}
 
-\begin{rSubsection}{\relsize{.5}Mobi Measure}{February 2025 - Present\smallskip}{\relsize{.5}Co-Founder}{}
-        \item Mobi Measure is an image metrology platform designed for measurements on semiconductor SEM/TEM images.
-        \item Main focuses are front-end development, sales, marketing, business development, design, and web development.
-        \item Founder-led sales, bringing Mobi Measure to the market from scratch.
+\begin{rSubsection}{\relsize{.5}Mobi Measure}{2/25 - Present\smallskip}{\relsize{.5}Co-Founder}{}
+        \item Founder-led sales, targeting the semiconductor industry through cold outreach. First customer acquired 8/25.
+        \item Co-founded and bootstrapped a SaaS startup and built a fully functioning and demoable product.
+        \item Headed up frontend development (Next.js), UX design, web development (React).
     \end{rSubsection}
 
-    \begin{rSubsection}{\relsize{.5}Rundoo}{August 2024 - February 2025\smallskip}{\relsize{.5}Account Executive}{}
-        \item PNW Territory account executive, covering Oregon, Washington, Idaho, Montana, Nevada, Alaska, and Hawaii, selling vertical SaaS to small business owners within the building materials industry.
+    \begin{rSubsection}{\relsize{.5}Rundoo}{8/24 - 2/25\smallskip}{\relsize{.5}Account Executive}{}
+        \item PNW Territory account executive, covering Oregon, Washington, Idaho, Montana, Nevada, Alaska, and Hawaii, selling vertical SaaS solutions to small business owners within the building materials industry.
+        \item Built out inside and outside sales processes as part of founding sales team, working cross-functionally with different internal teams and new customers, helping Rundoo reach its ARR goal of \$3M before position was eliminated.
+        \item Increased Rundoo's ARR by bringing in new customers, developing channel partnerships, and collaborating with customer success team, providing insights from previous account management experience for renewals and expansions to boost retention rate by ~30\%.
     \end{rSubsection}
 
-    \begin{rSubsection}{\relsize{.5}PitchBook Data}{January 2022 - June 2024\smallskip}{\relsize{.5}Account Executive, Media Sales $\cdot$ 4/23 - 6/24}{}
+    \begin{rSubsection}{\relsize{.5}PitchBook Data}{1/22 - 6/24\smallskip}{\relsize{.5}Account Executive, Media Sales $\cdot$ 4/23 - 6/24}{}
         \smallskip
-		\item Full-cycle, hunter sales executive, handling inbound leads, cold outbound prospecting, demo, follow-up, negotiation, close, account management post-close, and post-close upsells/cross-sells.
+		\item Full-cycle, hunter sales executive, handling inbound leads, cold outbound prospecting, demo, follow-up, negotiation, close, account management post-close, and post-close upsells/cross-sells with growth, performance, and brand marketing teams, servicing the private market finance sector.
+		\item Asked to join an up-and-coming, high business impact team due to stellar sales performance in previous role.
 		%\item Primary targets are consulting, accounting, advisory, law, investment bank, lenders, asset managers, VC, PE, and \\software firms who provide products or services to the VC, PE, M\&A, and private debt ecosystems.
             \item Closed over \$725,000 in new business by implementing a targeted, multi-channel outreach strategy with enterprises of all sizes, including several Fortune 100 and 500 firms.
             \item Post-ramp quota attainments of Q4 2023 - 80\% (99\% team avg) and Q1 2024 - 211\% (66.4\% team avg) with no marketing qualified leads, and limited SDR support.
 		
         \smallskip
         \smallskip
-            \textit{\relsize{.5}Account Manager, Middle Market $\cdot$ 1/22 - 3/23}
+            \textit{\relsize{.5}Account Manager, Mid-Market $\cdot$ 1/22 - 3/23}
         \smallskip
         \smallskip
 		\item Immediate high performer with a complex SaaS product, sold new subscriptions as well as managing, upselling, and renewing existing accounts. Closed over \$400,000 in new business in first three quarters post-ramp and \$1.2m in renewals/expansions.
@@ -94,13 +84,13 @@
 
 %------------------------------------------------
 
-	\begin{rSubsection}{Eli Lilly and Company}{February 2019 - November 2021}{Territory Sales Manager}{}
-		\item 2020 Pinnacle Award Winner (Presidents Club) - Awarded to top 10\% performing sales representatives who have also shown outstanding leadership and team impact across territory, district, and area.
-		\item Perennial top performer, always finishing in the top 3 at or above quota in a top 25 nationwide team, with quota attainments of 104\%, 106\%, and 109\% versus \\nationwide and area averages under 97\%. Awarded larger and more densely populated territories with greater business impact after each year.
+	\begin{rSubsection}{Eli Lilly \& Co}{1/19 - 11/21}{Territory Account Executive}{}
+		\item 2020 Pinnacle Award Winner (President's Club) - Awarded to top 10\% performing sales representatives who have also shown outstanding leadership and team impact across territory, district, and area.
+		\item Perennial top performer, always finishing in the top 3 inside a consistently top-25 nationwide team, with quota attainments of 104\%, 106\%, and 109\% versus nationwide and area averages under 97\%. Awarded larger and more densely populated territories with greater business impact after each year.
 
             %\item High focus on industry and product knowledge, combined with strategic discovery to identify client needs and demonstrate value.
   
-            \item Promoted in the second year due to sales performance and leadership impact, such as spearheading initiatives to increase team education on medical and physiological topics pertinent to our products, working with team to better utilize Tableau dashboards, and mentoring several interns who were extended full-time job offers nationwide.
+            \item Promoted in the second year due to sales performance and leadership impact, such as spearheading initiatives to increase team education on medical and physiological topics, increasing utilization of Tableau dashboards, and mentoring several interns who were extended full-time job offers nationwide.
             
 	\end{rSubsection}
 
@@ -108,27 +98,27 @@
 
 
         \begin{rSubsection}{University of Washington Foster School of 
-        Business}{January 2020 - Present}{Volunteer Sales Program Mentor}{}
+        Business}{1/20 - Present}{Volunteer Sales Program Mentor}{}
             \item Volunteer mentor, working quarterly with undergraduate students in the Jack Ann Rhodes Professional Sales Program.
         
            % \item Every quarter, students in the sales program are paired up with volunteer mentors. Responsibilities include meeting with the student and mentoring them as they begin their careers.
             
         \end{rSubsection}
         
-	\begin{rSubsection}{Keller Williams Realty}{January 2018 - January 2019}{Sales Development and Marketing}{}
+	\begin{rSubsection}{Keller Williams Realty}{1/18 - 1/19}{Sales Development and Marketing}{}
 		\item Prospected, generated, and qualified new business from outbound prospecting and inbound leads for residential homes, resulting in over \$8 Million in sales volume, driving +20\% YoY performance in a 16\% down market.
           % \item Sales KPI's involved call numbers, inbound response time, booked demos, and close rate on booked demos and were achieved by balancing inbound leads with cold outreach and following up with all prospects.
           %  \item Created marketing materials using Photoshop and Illustrator, including webpages, one-page pamphlets, a new sales presentation folder, and large-format banners.
 		
 	\end{rSubsection}
 
-        \begin{rSubsection}{Small Business Owner}{December 2016 - December 2021}{Tutor}{}
+        \begin{rSubsection}{Small Business Owner}{12/16 - 12/21}{Tutor}{}
             \item Built an in-person 1-on-1 tutoring business from the ground up, prospecting and building relationships with the \\surrounding communities to create initial opportunities, eventually transitioning into a 100\% referral-based business.
            % \item Responsibilities included business development, pre-planning of tutoring materials, execution, pricing/negotiation, and FP\&A.
            
         \end{rSubsection}
 
-        \begin{rSubsection}{Kent Meridian High School}{June 2016 - December 2016}{Quarterbacks Coach / Co-Offensive Coordinator}{}
+        \begin{rSubsection}{Kent Meridian High School}{6/16 - 12/16}{Quarterbacks Coach / Co-Offensive Coordinator}{}
         
             \item Led the quarterback position group to foster capable leaders with a heavy emphasis on life outside of football, including high achievement in academics and essential life skills.
             \item Assisted with creation of practice plan/playbook, conducted film review, held regular coaches meetings and player \\meetings to constantly evolve strategy around how to use football to positively impact players' life trajectory.
@@ -136,7 +126,7 @@
             
         \end{rSubsection}
 
-        \begin{rSubsection}{University of Washington Department of Intercollegiate Athletics}{March 2014 - June 2016}{Football Equipment Manager}{}
+        \begin{rSubsection}{University of Washington Department of Intercollegiate Athletics}{3/14 - 6/16}{Football Equipment Manager}{}
         
             \item Worked under head coach Chris Petersen and Offensive Coordinator Jonathan Smith and managed student-athlete equipment for over 100 athletes with an extreme focus on attention-to-detail for pregame, walk-through, practice, travel, and gameday.
 
@@ -154,8 +144,8 @@
 
 \begin{rSection}{Education}
 	
-	\textbf{University of Washington} \hfill June 2016 \\ 
-	B.S. in Physiology\\
+	\textbf{University of Washington} \hfill 6/16 \\ 
+	B.S. Biology\\
 
 	
 \end{rSection}
@@ -175,16 +165,6 @@
 	\end{tabular}
 
 \end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	EXAMPLE SECTION
-%----------------------------------------------------------------------------------------
-
-%\begin{rSection}{Section Name}
-
-	%Section content\ldots
-
-%\end{rSection}
 
 %----------------------------------------------------------------------------------------
 
